--- a/style.css
+++ b/style.css
@@ -247,16 +247,16 @@ body {
       height:140vh;
       background-color:black;
     } */
-    .task-modal{
+    /* .task-modal{
       height: 2000vh;
       top:-950%;
-    }
-    .single-task-modal{
+    } */
+    /* .single-task-modal{
       height: 2000vh;
       top: -950%;
-    }
-    .item-modal{
+    } */
+    /* .item-modal{
       height: 2000vh;
       top: -950%;
-    }
+    } */
   }
